[project]
name = "conscious-canvas"
description = "conscious-canvas Burning Man Art Project"
version = "0.1.0"
authors = [
    { name = "Aleks Kamko", email = "aykamko@gmail.com" }
]
dependencies = [
    "fastapi[all]",
    "uvicorn[standard]",
    "Pillow>=10.0.0",
    "requests",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "black",
]

[tool.black]
line-length = 120

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
]
